adding a class to handle the plan with orifice

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 		
 		<script src="control_panel.js"></script>
 		<script src="surgicalTool.js"></script>
+		<script src="planWithOrifice.js"></script>
 		<script src="main.js"></script>
 		<script>
 			//! our javascript here
